--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -14,3 +14,16 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+  runs:
+    needs: build
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+      - name: Build and Run applications
+        run: |
+          echo running project
+          mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
