--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -16,6 +16,7 @@ jobs:
         run: mvn -B package --file pom.xml
   runs:
     needs: build
+    runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
