--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -24,6 +24,8 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Build and Run applications
         run: |
           echo running project
