--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,38 +1,48 @@
 name: Deploy Simple Spring boot application
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '*/2 * * * *'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Github output
+        uses: ${{ toJSON(github) }}
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-#      - name: Build with Maven
-#        run: mvn -B package --file pom.xml
       - name: Build with Maven
-        run: ./mvnw package  # Replace with the build command for your application
-
-      - name: Run Spring Boot application to download files
-        run: java -jar target/simple-rest-api.jar  # Replace with the actual name of your JAR file
-
-  runs:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+        run: mvn -B package --file pom.xml
       - name: Build and Run applications
         run: |
           echo running project
-          mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
+          mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap        
+
+#      - name: Build with Maven
+#        run: ./mvnw package  # Replace with the build command for your application
+#
+#      - name: Run Spring Boot application to download files
+#        run: java -jar target/simple-rest-api.jar  # Replace with the actual name of your JAR file
+
+#  runs:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Get Code
+#        uses: actions/checkout@v3
+#      - name: set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: maven
+#      - name: Build and Run applications
+#        run: |
+#          echo running project
+#          mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
