--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,6 +1,5 @@
 name: Deploy Simple Spring boot application
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
