--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -17,6 +17,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Build and Run applications
-        run: |
-          echo running project
-          mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
+        run: mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
