--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,5 +1,7 @@
 name: Deploy Simple Spring boot application
-on: workflow_dispatch
+on:
+  push:
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
