--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,6 +1,8 @@
 name: Deploy Simple Spring boot application
 on:
   push:
+    branches:
+      - master
   workflow_dispatch:
 jobs:
   build:
@@ -8,6 +10,8 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+        with:
+          ref: master
       - name: Github output
         uses: ${{ toJSON(github) }}
       - name: Set up JDK 17
