--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           ref: master
       - name: Github output
-        uses: ${{ toJSON(github) }}
+        run:  echo ${{ toJSON(github) }}
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
