--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,7 +1,7 @@
 name: Deploy Simple Spring boot application
 on:
   schedule:
-    - cron: '*/2 * * * *'
+    - cron: '* * * * *'
 #  push:
 #    branches:
 #      - master
