--- a/.github/workflows/springboot-dev.yml
+++ b/.github/workflows/springboot-dev.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
         with:
-          ref: master
+          ref: dev
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
