--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -25,3 +25,22 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: Build and Run applications
         run: mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
+
+  build-dev:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Dev code
+        uses: actions/checkout@v3
+        with:
+          ref: dev
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with maven
+        run: mvn -B package --file pom.xml
+      - name: Build and Run applications
+        run: mvn spring-boot:run -Dspring-boot.run.profiles=dev -Dspring-boot.run.arguments=--cronparams=sitemap
