--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,7 +1,9 @@
 name: Deploy Simple Spring boot application
 on:
-  schedule:
-    - cron: '* * * * *'
+  push:
+    branches:
+      - master
+      - dev
   workflow_dispatch:
 #  push:
 #    branches:
